--- a/.rever/.authors.yml
+++ b/.rever/.authors.yml
@@ -1,4 +1,6 @@
 - name: Geoffrey H. Garrett
   email: g.h.garrett13@gmail.com
-  num_commits: 20
+  num_commits: 3
   first_commit: 2021-05-02 14:04:51
+  aliases:
+  - Geoffrey Garrett
