Updated authorship for 0.0.1

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@ dmypy.json
 .idea/
 # Rever
 rever/
+
+# Custom (these are copied during Sphinx build)
+/docs/source/CHANGELOG.rst
+/docs/source/AUTHORS
